--- a/generator_LLM.ipynb
+++ b/generator_LLM.ipynb
@@ -894,23 +894,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "4f0cccc1",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array(['indifferentism', 'indifference',\n",
-       "       'critical investigation of pure reason', 'chaos and night',\n",
-       "       'source', 'prelude', 'object of inquiries',\n",
-       "       'pretended indifferentists', 'matured judgement of the age',\n",
-       "       'illusory knowledge', 'tribunal'], dtype=object)"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/dominikpichler/Documents/Pet_Projects/Athene/main.ipynb Cell 14\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/dominikpichler/Documents/Pet_Projects/Athene/main.ipynb#X16sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m nodes \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mconcat([dfg[\u001b[39m'\u001b[39m\u001b[39mnode_1\u001b[39m\u001b[39m'\u001b[39m], dfg[\u001b[39m'\u001b[39m\u001b[39mnode_2\u001b[39m\u001b[39m'\u001b[39m]], axis\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\u001b[39m.\u001b[39munique()\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dominikpichler/Documents/Pet_Projects/Athene/main.ipynb#X16sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m nodes\u001b[39m.\u001b[39mshape\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/dominikpichler/Documents/Pet_Projects/Athene/main.ipynb#X16sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m nodes\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1215,7 +1212,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
