--- a/ER-NLP/playground_ER-NLP.ipynb
+++ b/ER-NLP/playground_ER-NLP.ipynb
@@ -1,26 +1,246 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-17T16:56:44.848728Z",
-     "start_time": "2024-09-17T16:56:44.840594Z"
+     "end_time": "2024-09-25T06:21:24.554889Z",
+     "start_time": "2024-09-25T06:21:24.549563Z"
     }
    },
-   "source": "print(\"hallo\")",
+   "cell_type": "code",
+   "source": [
+    "import sqlite3\n",
+    "from collections import Counter\n",
+    "import re\n",
+    "import matplotlib.pyplot as plt\n"
+   ],
+   "id": "503cf801e9d07140",
+   "outputs": [],
+   "execution_count": 5
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hallo\n"
+      "('olly UG (haftungsbeschränkt)',)\n",
+      "('BLUECHILLED Verwaltungs GmbH',)\n",
+      "('Mittelständische Beteiligungsgesellschaft Bremen mbH',)\n",
+      "('Albert Barufe GmbH',)\n",
+      "('ITERGO Informationstechnologie GmbH',)\n",
+      "('Rheinbahn AG',)\n",
+      "('Verwaltung IFÖ Zweite Immobilienfonds für Österreich GmbH',)\n",
+      "('AWS Personalmarketing GmbH',)\n",
+      "('Rembert Rechtsanwälte Rembert Müller Putzier + Partner eingetragene Partnerschaft mit beschränkter Berufshaftung',)\n",
+      "('POX Media Verwaltungs GmbH',)\n",
+      "('HB-DIGITAL GmbH',)\n",
+      "('Neunte Grundstücksverwaltung AHG-Beteiligungs- und Handelsgesellschaft mbH & Co. KG',)\n",
+      "('wpd Windparks Westfalen IV GmbH',)\n",
+      "('Palletways Deutschland GmbH',)\n",
+      "('S-KON Sales Kontor Hamburg GmbH',)\n",
+      "('ElectronicPartner Handel SE',)\n",
+      "('Stadtküche GmbH',)\n",
+      "('SIEBTE PAXAS Treuhand- und Beteiligungsgesellschaft mbH',)\n",
+      "('\"ad fontes\" Solartechnik GmbH',)\n",
+      "('Ferox Zweite Holding GmbH',)\n",
+      "('Yücebudak IT & Vertrieb UG (haftungsbeschränkt)',)\n",
+      "('Verwaltung NORDCAPITAL Schiffsportfolio 4 GmbH',)\n",
+      "('HCG Hanse Convenience GmbH',)\n",
+      "('FAP Beteiligungsgesellschaft mbH',)\n",
+      "('Comfort Hamburg Gesellschaft für Geschäftsflächen und Unternehmensvermittlung mbH',)\n",
+      "('Dr. Gottfried Neuhaus Treuhand GmbH',)\n",
+      "('Monheimer Biermanufactur GmbH',)\n",
+      "('Panasonic Europe Ltd. Zweigniederlassung Deutschland Hamburg Office',)\n",
+      "('\"Renta Reederei\" GmbH',)\n",
+      "('Dura Automotive Systems GmbH',)\n",
+      "('FB trust GmbH',)\n",
+      "('Can Koi Ibiza GmbH & Co. KG',)\n",
+      "('Feedback Vermögensberatungs- und Vermittlungsgesellschaft mbH',)\n",
+      "('W247 web app systems UG (haftungsbeschränkt)',)\n",
+      "('JANT Express-Logistik UG (haftungsbeschränkt)',)\n",
+      "('SEABRIDGE Transport GmbH',)\n",
+      "('Schiffsfonds Ownership Tonnage VII GmbH & Co. KG',)\n",
+      "('KidINVEST GmbH',)\n",
+      "('NXP Semiconductors Germany GmbH',)\n",
+      "('Verwaltung Projektgesellschaft Marco Polo Tower GmbH',)\n",
+      "('Eckelmann Umwelt Holding GmbH',)\n",
+      "('Factor Design Verwaltungs GmbH',)\n",
+      "('LUISE Verwaltungs GmbH',)\n",
+      "('Schmidts Tivoli Gastspiel GmbH',)\n",
+      "('Verwaltung Schiffahrts-Gesellschaft \"HANSA BRANDENBURG\" mbH',)\n",
+      "('AMB Trade GmbH',)\n",
+      "('Verwaltung ZEABORN Ship Management GmbH',)\n",
+      "('DZ HYP AG',)\n",
+      "('ZAEVERS GmbH',)\n",
+      "('Auerbach Trading GmbH',)\n",
+      "('Poertzgen GmbH Unternehmensberatung',)\n",
+      "('[m]SCIENCE GmbH',)\n",
+      "('Verwaltung MS \"HAMMONIA TOSCANA\" GmbH',)\n",
+      "('C. Gathmann Computer-System-Beratung GmbH',)\n",
+      "('Ojooo Vo GmbH',)\n",
+      "('Alessio Analytics UG (haftungsbeschränkt)',)\n",
+      "('SMK Verwertungsgesellschaft mbH',)\n",
+      "('Beiersdorf Aktiengesellschaft',)\n",
+      "('AGARBA Grundstücks-Vermietungsgesellschaft mbH',)\n",
+      "('Baumarkt Max Bahr Praktiker Einkaufs GmbH',)\n",
+      "('Victoria Lebensversicherung Aktiengesellschaft',)\n",
+      "('LuMa Projektentwicklungs-GmbH',)\n",
+      "('Amber Shipping UG (haftungsbeschränkt) & Co. KG',)\n",
+      "('REDEVCO Logistics Güdderath GmbH & Co. OHG',)\n",
+      "('Verwaltung \"MS Sophie\" Schifffahrtsgesellschaft mbH',)\n",
+      "('AL Aman Engineering and Trading UG (haftungsbeschränkt)',)\n",
+      "('Verwaltungsgesellschaft MS \"Barmbek\" mbH',)\n",
+      "('Närrische Frauen Himmelgeist e.V.',)\n",
+      "('MS \"Favourisation\" Verwaltung GmbH',)\n",
+      "('Wünsche Services GmbH',)\n",
+      "('Merica Capital GmbH',)\n",
+      "('Kröger Baugeräte Service GmbH',)\n",
+      "('Achte display system GmbH',)\n",
+      "('Atlantik Hafenbetriebe Geuther & Schnitger GmbH & Co. KG',)\n",
+      "('TT Trading GmbH',)\n",
+      "('AVASPA Bremen Vermietungsgesellschaft mbH',)\n",
+      "('TOL Time of Luxury GmbH',)\n",
+      "('Mutabor Brandspaces GmbH',)\n",
+      "('Gebäudereinigung Wolff GmbH',)\n",
+      "('He:Lee EXPO - Messe : Consulting : Project Management Verwaltungs GmbH',)\n",
+      "('Eurofins GSC Germany GmbH',)\n",
+      "('EQUINOX Investment GmbH',)\n",
+      "('Sell Facility Services GmbH',)\n",
+      "('BLVÈ UG (haftungsbeschränkt)',)\n",
+      "('Luzemann Services Verwaltungsgesellschaft mbH',)\n",
+      "('Sasol Wax GmbH',)\n",
+      "('Molten Europe GmbH',)\n",
+      "('VIERTE Fonds-Beteiligungsgesellschaft mbH',)\n",
+      "('GENIGO GmbH',)\n",
+      "('WEHR BULKCARRIERS GmbH & Co KG',)\n",
+      "('R.F.L. Gewerbe Immobilien Verwaltungs GmbH',)\n",
+      "('Verwaltungsgesellschaft EGRIMA mbH',)\n",
+      "('Lampe Asset Management GmbH',)\n",
+      "('Hartungstraße 12 Verwaltungsgesellschaft mbH',)\n",
+      "('ES Medien Agentur + Handelsgesellschaft mbH & Co. KG',)\n",
+      "('Dewigo (Dealing with goods) UG (haftungsbeschränkt)',)\n",
+      "('NPC HOTELENTWICKLUNGS U. - MANAGEMENT GmbH',)\n",
+      "('TRACOA GmbH',)\n",
+      "('Muehlhan Deutschland GmbH',)\n",
+      "('Harburg-Freudenberger Maschinenbau GmbH',)\n"
      ]
     }
    ],
-   "execution_count": 1
+   "execution_count": 4,
+   "source": [
+    "def run_query(database_path, query):\n",
+    "    # Connect to the SQLite database\n",
+    "    # If the database does not exist, it will be created\n",
+    "    connection = sqlite3.connect(database_path)\n",
+    "    \n",
+    "    try:\n",
+    "        # Create a cursor object using the connection\n",
+    "        cursor = connection.cursor()\n",
+    "        \n",
+    "        # Execute the SQL query\n",
+    "        cursor.execute(query)\n",
+    "        \n",
+    "        # Fetch all results from the executed query\n",
+    "        results = cursor.fetchall()\n",
+    "        \n",
+    "        # Print each row in the results\n",
+    "        for row in results:\n",
+    "            print(row)\n",
+    "            \n",
+    "    except sqlite3.Error as e:\n",
+    "        print(f\"An error occurred: {e}\")\n",
+    "        \n",
+    "    finally:\n",
+    "        \n",
+    "        # Close the connection to the database\n",
+    "        if connection:\n",
+    "            connection.close()\n"
+   ],
+   "id": "initial_id"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "def analyze_term_frequency(names):\n",
+    "    # Join all names into a single string\n",
+    "    all_names = ' '.join(names)\n",
+    "    \n",
+    "    # Tokenize the string into words using regex to handle different delimiters\n",
+    "    words = re.findall(r'\\b\\w+\\b', all_names.lower())\n",
+    "    \n",
+    "    # Count the frequency of each word using Counter\n",
+    "    term_frequency = Counter(words)\n",
+    "    \n",
+    "    return term_frequency"
+   ],
+   "id": "77fac79add9ac3cb"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Example usage\n",
+    "database_path = 'openregister.db'  # Path to your SQLite database file\n",
+    "query = 'SELECT name FROM company LIMIT 100;'  # Replace 'your_table' with your actual table name\n",
+    "\n",
+    "list_all_names = run_query(database_path, query)"
+   ],
+   "id": "1b369619a5a307b9"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Analyze term frequency in names\n",
+    "term_frequency = analyze_term_frequency(list_all_names)\n",
+    "\n",
+    "# Print term frequency results\n",
+    "for term, freq in term_frequency.items():\n",
+    "    print(f\"'{term}': {freq}\")"
+   ],
+   "id": "9021fe6c1a78a96d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "\n",
+    "def plot_top_terms(term_frequency, top_n=10):\n",
+    "    # Get the most common terms and their frequencies\n",
+    "    common_terms = term_frequency.most_common(top_n)\n",
+    "    \n",
+    "    # Separate terms and frequencies for plotting\n",
+    "    terms, frequencies = zip(*common_terms)\n",
+    "    \n",
+    "    # Create a bar chart\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    plt.bar(terms, frequencies, color='skyblue')\n",
+    "    \n",
+    "    # Add title and labels\n",
+    "    plt.title('Top Occurring Terms')\n",
+    "    plt.xlabel('Terms')\n",
+    "    plt.ylabel('Frequency')\n",
+    "    \n",
+    "    # Rotate x-axis labels for better readability\n",
+    "    plt.xticks(rotation=45)\n",
+    "    \n",
+    "    # Show plot\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n"
+   ],
+   "id": "d2007a8d70f7bc7"
   }
  ],
  "metadata": {
